# regen-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
crates/regen-rs/: Cargo.toml  buf.gen.yaml
crates/regen-rs/src/: client.rs  error.rs  lib.rs  signer.rs
crates/regen-rs/src/cosmos/: auth_client.rs  authz_client.rs  bank_client.rs  crisis_client.rs  distribution_client.rs  evidence_client.rs  feegrant_client.rs  gov_client.rs  mint_client.rs  mod.rs  params_client.rs  slashing_client.rs  staking_client.rs  upgrade_client.rs  vesting_client.rs
crates/regen-rs/src/events/: subscriber.rs
crates/regen-rs/src/regen/: mod.rs
crates/regen-rs/tests/: client_tests.rs
crates/regen-rs/tools/proto-compiler/: Cargo.toml
crates/regen-rs/tools/proto-downloader/src/: main.rs
crates/regen-types/: Cargo.toml  buf.gen.yaml  buf.yaml
crates/regen-types/proto/test/: simple.proto
crates/regen-types/src/: client.rs  error.rs  lib.rs
crates/regen-types/src/cosmos/: bank_client.rs  mod.rs
crates/regen-types/src/regen/: data_client.rs  eco_credit_client.rs  mod.rs
crates/regen-types/tests/: client_tests.rs  e2e_client_tests.rs
crates/regen-types/tools/proto-compiler/src/: main.rs
crates/regen-types/tools/proto-downloader/: Cargo.toml  flake.nix
crates/regen-types/tools/proto-downloader/src/: main.rs
