[workspace]
members = [
    "crates/regen-types",
]
exclude = [
    "crates/regen-types/tools/proto-downloader",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ybird-labs/regen-rs"
authors = ["Jeancarlo Barrios"]

[workspace.dependencies]
# Code generation dependencies
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
tonic = "0.13.1"
tonic-build = "0.13.1"

# HTTP client for downloading proto files
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }

# Core async runtime
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.5"

