[workspace]
members = [
    "crates/regen-rs",
]
exclude = [
    "crates/regen-rs/tools/proto-downloader",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ybird-labs/regen-rs"
authors = ["Jeancarlo Barrios"]

[workspace.dependencies]
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
tonic = "0.13"
tonic-build = "0.13"

# JSON serialization for protobuf
pbjson = "0.7"
pbjson-build = "0.7"
pbjson-types = "0.7"

# HTTP client for downloading proto files
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }

# Core async runtime
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.5"

# WebSocket support
tokio-tungstenite = "0.27"

# Async streams and utilities
futures = "0.3"

# Logging
log = "0.4.27"

[profile.dev]
incremental = true  # Enable incremental compilation (default in dev)

[profile.test]
incremental = true  # Also enable for tests

