[package]
name = "regen-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generated Rust types for Regen and Cosmos SDK protobuf definitions"

[build-dependencies]
# Code generation tools
prost-build = { workspace = true }
tonic-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
# Generated protobuf types
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }

# Error handling  
thiserror = { workspace = true }

[features]
default = []
client = ["tonic"]
