[package]
name = "regen-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generated Rust types for Regen and Cosmos SDK protobuf definitions"

[build-dependencies]
# Code generation tools
prost-build = { workspace = true }
tonic-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
# Generated protobuf types
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

# Cosmos SDK types (pre-generated)
cosmos-sdk-proto = "0.21"

# Serialization
serde = { workspace = true }

# Error handling  
thiserror = { workspace = true }

# Signer functionality
cosmrs = "0.18"                         
bip32 = "0.5"                            
bip39 = "2.1"                            
rand = "0.9"                            

[features]
default = []
client = []
