[package]
name = "regen-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generated Rust types for Regen and Cosmos SDK protobuf definitions"

[build-dependencies]
# Code generation tools
prost-build = { workspace = true }
tonic-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
# Generated protobuf types
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

tendermint-proto = "0.39"

cosmos-sdk-proto = { version = "0.27", features = ["serde"] }

# JSON serialization support
pbjson = { workspace = true }
pbjson-types = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling  
thiserror = { workspace = true }

# Signer functionality
cosmrs = "0.18"                         
bip32 = "0.5"                            
bip39 = "2.1"                            
rand = "0.9"

[features]
default = []
client = []

[dev-dependencies]
tokio = { version = "1.46", features = ["rt", "macros", "time"] }
