[package]
name = "proto-downloader"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.20.0"
walkdir = "2.5"
